2011-04-18 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKNotificationCenter.m: Move handling errors on watch
	generation into the observable, make the worker thread perform
	adding the watch if possible. This improves reliability when we
	are operating without synchronization on +initialize.

2011-04-15 Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/TestDKArgument.m: Fix word-size issues.
	* Documentation/install.texi: Bump required gnustep-base
	version to 1.22.0.
	* INSTALL: Regenerate.

2011-04-11 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpointManager.m: Use pseudo interfaces instead of
	@class declarations for private classes that need to be
	initialized before starting the worker thread. This makes clang
	happy.
	* Source/DKArgument.m: Remove extraneous parantheses.
	* Source/DKInterface.m: Fix a bug that caused property
	getters/setters to be registered twice.

	Clang compatibility and bugfixes by Sebastian Reitenbach.

2011-03-13 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GNUmakefile: Remove redundant fixup for atomic
	operations linkage errors on 32bit intel platforms.

2011-02-28 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Import a lot of autoconf stuff to detect whether
	we need to link libgcc for atomic operations.
	* config.make.in: Add flags for atomic operations.
	* aclocal.m4
	* configure:
	Regenerate
	* m4/*
	* config.guess
	* config.sub
	* ltmain.sh
	* libtool
	* install-sh:
	Add libtool/autconf related file.

	Fixes to link libgcc for atomic operations when needed.

2011-02-28 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GNUmakefile: Attempt to fix linkage errors for 32bit
	intel platforms.

2011-02-27 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/DBusKit.gsdoc: Documentation improvement.
	* Headers/DKProxy.h
	* Source/DKProxy.m:
	Document bus-state notifications. Turn strings for notification
	names into globals. 
	* Source/DKEndpointManager.m: Move thread starting code to the